--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Roboto:300" rel="stylesheet">
 		<link rel="stylesheet" href="/app.css">
+		<script src="https://kit.fontawesome.com/b93a07897c.js" crossorigin="anonymous"></script>
 		%svelte.head%
 	</head>
 	<body>
